# SpaceGUI

./: .gitignore
install/: local_setup.sh  setup.sh
install/SpaceGUI/lib/SpaceGUI/: AstroGUI
install/SpaceGUI/share/SpaceGUI/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.xml  package.zsh
install/SpaceGUI/share/SpaceGUI/cmake/: SpaceGUIConfig.cmake
log/: latest_list
src/SpaceGUI/: CMakeLists.txt
src/SpaceGUI/include/: image_visualizer.hpp  visualizer_base.hpp  visualizer_factory.hpp  visualizer_template.hpp
src/SpaceGUI/include/SpaceGUI/: image_read.hpp  log_read.hpp  mainwindow.h  moveable_log_widget.hpp  moveable_numeric_widget.hpp  moveable_widget.hpp  number_read.hpp
src/SpaceGUI/src/: AstroGUI.cpp  autonomywindow.cpp  autonomywindow.h  image_visualizer.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveable_log_widget.cpp  moveable_numeric_widget.cpp  moveable_widget.cpp  qcustomplot.cpp  ros_data_widget.cpp  ros_data_widget.hpp  ros_executor_thread.cpp  ros_executor_thread.hpp  visualizer_base.cpp
src/SpaceGUI/src/install/: local_setup.sh  setup.sh
src/SpaceGUI/src/log/: latest_build
src/SpaceGUI/src/nodes/: controller_read.cpp  controller_read.hpp  image_read.cpp  log_read.cpp  number_read.cpp  qt_ros_bridge_node.cpp  qt_ros_bridge_node.hpp  topic_read.cpp  topic_read.hpp
src/install/: local_setup.sh  setup.sh
src/install/SpaceGUI/lib/SpaceGUI/: AstroGUI
src/install/SpaceGUI/share/SpaceGUI/: package.bash  package.dsv  package.sh
src/install/SpaceGUI/share/ament_index/resource_index/parent_prefix_path/: SpaceGUI
src/log/: latest_build
